# SDL2-App

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Screen.cpp  Screen.h  main.cpp
